5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4015/executions/1590_1016.log
== TEST (2019-03-26 20:09:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("Escreva a medida do primeiro lado"))
b=float(input("Escreva a medida do segundo lado"))
c=float(input("Escreva a medida do terceiro lado"))
s=(a+b+c)/3
e=s*(s-a)*(s-b)*(s-c)
import math
f=math.sqrt(e)
print(f)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    f=math.sqrt(e)
ValueError: math domain error
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:47:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("Escreva a medida do primeiro lado"))
b=float(input("Escreva a medida do segundo lado"))
c=float(input("Escreva a medida do terceiro lado"))
s=(a+b+c)/3
from math import*
h=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(h,5)
		

-- EXECUTION TIME:
0.122546
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 12
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:47:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("Escreva a medida do primeiro lado"))
b=float(input("Escreva a medida do segundo lado"))
c=float(input("Escreva a medida do terceiro lado"))
s=(a+b+c)/2
from math import*
h=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(h,5)
		

-- EXECUTION TIME:
0.162604
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 12
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:47:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a=float(input("Escreva a medida do primeiro lado"))
b=float(input("Escreva a medida do segundo lado"))
c=float(input("Escreva a medida do terceiro lado"))
s=(a+b+c)/2
from math import*
h=sqrt(s*(s-a)*(s-b)*(s-c))
print(round(h,5))
		

-- EXECUTION TIME:
0.132098
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
